--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
   <meta charset="UTF-8">
   <title>SmartSeer</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-  <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Comfortaa:light'>
-  <link rel="stylesheet" href="./style.css">
+<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Comfortaa:light'><link rel="stylesheet" href="./style.css">
+
 </head>
 <body>
+  
 <div class="wrapper">
   <div id="teaser">
     <svg viewBox="0 0 240 240">
