--- a/index.html
+++ b/index.html
@@ -1,36 +1,38 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>SmartSeer</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Comfortaa:light'><link rel="stylesheet" href="./style.css">
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-<link rel="manifest" href="/site.webmanifest">
+	<meta charset="UTF-8">
+	<title>SmartSeer</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="./style.css">
+	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+	<link rel="manifest" href="/site.webmanifest">
 </head>
 <body>
 <div class="wrapper">
 	<div id="teaser">
 		<svg viewBox="0 0 240 240">
 			<g class="blink">
-				<circle class="circle-1" r="52" stroke-width="13" stroke-dasharray="0 20.5" />
-				<circle class="circle-2 blink" r="67" stroke-width="18" stroke-dasharray="0 26.2" stroke-dashoffset="12" />
-				<circle class="circle-3" r="84" stroke-width="20" stroke-dasharray="0 33" />
-				<circle class="circle-4" r="100" stroke-width="13" stroke-dasharray="0 39" stroke-dashoffset="18" />
-				<circle class="circle-5" r="107" stroke-width="9" stroke-dasharray="0 42" stroke-dashoffset="0" />
-				<circle class="circle-6" r="117" stroke-width="8" stroke-dasharray="0 45.9" stroke-dashoffset="22" />
+				<circle class="circle-1" r="52" stroke-width="13" stroke-dasharray="0 20.5"/>
+				<circle class="circle-2 blink" r="67" stroke-width="18" stroke-dasharray="0 26.2"
+						stroke-dashoffset="12"/>
+				<circle class="circle-3" r="84" stroke-width="20" stroke-dasharray="0 33"/>
+				<circle class="circle-4" r="100" stroke-width="13" stroke-dasharray="0 39" stroke-dashoffset="18"/>
+				<circle class="circle-5" r="107" stroke-width="9" stroke-dasharray="0 42" stroke-dashoffset="0"/>
+				<circle class="circle-6" r="117" stroke-width="8" stroke-dasharray="0 45.9" stroke-dashoffset="22"/>
 			</g>
 		</svg>
 
 		<h1>SmartSeer</h1>
 
 		<p>
-			<span id="quote">"As an AI language model, I don’t have the ability to hear or perceive sounds. However, based on my understanding Smartseer could be interpreted as a name or brand associated with intelligence or perception, perhaps related to technology or artificial intelligence."</span><span id="author">ChatGPT</span>
+			<span id="quote">"As an AI language model, I don’t have the ability to hear or perceive sounds. However, based on my understanding Smartseer could be interpreted as a name or brand associated with intelligence or perception, perhaps related to technology or artificial intelligence."</span><span
+				id="author">ChatGPT</span>
 		</p>
 	</div>
 </div>
-  
+
 </body>
 </html>
